--- a/index.html
+++ b/index.html
@@ -437,9 +437,7 @@
                 <label class="p2bLabel">Taskbar</label>
                 <div class="taskbarSize">
                     <label class="taskbarSizeLbl"></label>
-                    <div class="tbSize tbSmall" onclick="smallTB()" data-taskbarSize="Small"></div>
-                    <div class="tbSize tbMedium" onclick="medTB()" data-taskbarSize="Medium (Default)"></div>
-                    <div class="tbSize tbLarge" onclick="largeTB()" data-taskbarSize="Large"></div>
+                    <div class="tbSize tbSmall" onclick="smallTB()" data-taskbarSize="Small (Default)"></div>
                 </div>
                 <div class="autoHide">
                     <label class="autoHideLbl"></label>
