--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/png" href="icon.png">
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
-    <title>Windows 10X</title>
+    <title>Windows 10</title>
     <link rel="stylesheet" href="css.css">
     <link rel="stylesheet" href="segoe.css">
     <link rel="stylesheet" href="twitter.css">
@@ -97,7 +97,7 @@
                 <div class="fbLastLbl1">You're all done!</div>
                 <div class="fbLastLbl2">Windows is now all yours. Enjoy!</div>
                 <img src="OOBE\final.svg" class="fbLastImg">
-                <div class="frNextBtn frNext4" onclick="OOBEsLastFinish();">Start using Windows 10X</div>
+                <div class="frNextBtn frNext4" onclick="OOBEsLastFinish();">Start using Windows 10</div>
             </div>
         </div>
     </div>
@@ -344,7 +344,7 @@
             <div class="p1page p1about" id="ss2page1">
                 <label class="p2bLabel">About</label>
                 <div class="deviceSpecs" data-specLBL="Device specifications">
-                    <div class="devspec dvspc1" data-devSpecLBL="Device name">MinWin10X-PC</div>
+                    <div class="devspec dvspc1" data-devSpecLBL="Device name">MinWin10-PC</div>
                     <div class="devspec dvspc2" data-devSpecLBL="Manufacturer">Futur3Sn0w Studio</div>
                     <div class="devspec dvspc3" data-devSpecLBL="Model">HTML5 & CSS3</div>
                     <div class="devspec dvspc4" data-devSpecLBL="Processor">Chromium</div>
@@ -355,11 +355,11 @@
                     <div class="devspec dvspc9" data-devSpecLBL="Chip SOC version">Futur3(R) Center(TM) i21-21514X CPU @ 2.21GHz</div>
                 </div>
                 <div class="windowsSpecs" data-specLBL="Windows specifications">
-                    <div class="devspec dvspc1" data-devSpecLBL="Edition">Windows 10X</div>
+                    <div class="devspec dvspc1" data-devSpecLBL="Edition">Windows 10</div>
                     <div class="devspec dvspc2" data-devSpecLBL="Version">Web</div>
                     <div class="devspec dvspc3" data-devSpecLBL="Installed on">5/9/21</div>
                     <div class="devspec dvspc4" data-devSpecLBL="OS build">21513.1</div>
-                    <div class="devspec dvspc5" data-devSpecLBL="Experience">Windows 10X Futur3Sn0w Edition Experience Pack 2.0</div>
+                    <div class="devspec dvspc5" data-devSpecLBL="Experience">Windows 10 Futur3Sn0w Edition Experience Pack 2.0</div>
                 </div>
             </div>
         </div>
