--- a/index.html
+++ b/index.html
@@ -89,17 +89,11 @@
     </div>
 
     <div class="startMenu" id="startMenu">
-        <div class="smTop">
-            <textarea class="searchBar" rows="1" placeholder="Search the web and your stuff"></textarea>
-            <div class="smtIcon searchIcon">︵</div>
-            <div class="smtIcon micIcon"></div>
-        </div>
         <div class="smBottom">
             <div class="smbSection smbSect1">
                 <label class="ss1Lbl">My apps and websites</label>
-                <div class="ss1Btn" id="showAllBtn" onclick="showAllLauncherBtn()">Show all</div>
             </div>
-            <div class="smbSection smbSect2" id="smbSect2">
+            <div class="smbSection smbSect2" id="smbSect2" style="height: 300px;">
                 <div class="ss2Icon ss2Icon13" id="ss2IconSettings" data-label="Settings" onclick="openSettingsFromStartMenu()"></div>
                 <div class="ss2Icon ss2Icon15" id="ss2IconCalc" data-label="Calculator" onclick="openCalcFromStartMenu()"></div>
                 <div class="ss2Icon ss2Icon1" id="ss2Icon" data-label="Microsoft Edge"></div>
@@ -118,8 +112,8 @@
                 <div class="ss2icon ss2Icon16" id="ss2Icon" data-label="WinFR"></div>
                 <div class="ss2icon ss2Icon17" id="ss2Icon" data-label="Remote Desktop"></div>
                 <div class="ss2icon ss2Icon18" id="ss2Icon" data-label="Teams"></div>
-                <div class="ss2icon ss2Icon19" id="ss2Icon" data-label="Alarms & Clock"></div>
-                <div class="ss2icon ss2Icon20" id="ss2Icon" data-label="Movies & TV"></div>
+                <div class="ss2icon ss2Icon19" id="ss2Icon" data-label="Alarms &amp; Clock"></div>
+                <div class="ss2icon ss2Icon20" id="ss2Icon" data-label="Movies &amp; TV"></div>
                 <div class="ss2icon ss2Icon21" id="ss2Icon" data-label="Camera"></div>
                 <div class="ss2icon ss2Icon22" id="ss2Icon" data-label="Get Help"></div>
                 <div class="ss2icon ss2Icon23" id="ss2Icon" data-label="Tips"></div>
@@ -131,7 +125,7 @@
                 <div class="ss2icon ss2Icon29" id="ss2Icon" data-label="Groove Music"></div>
                 <div class="ss2icon ss2Icon30" id="ss2Icon" data-label="Paint 3D"></div>
                 <div class="ss2icon ss2Icon31" id="ss2Icon" data-label="Office"></div>
-                <div class="ss2icon ss2Icon32" id="ss2Icon" data-label="Snip & Sketch"></div>
+                <div class="ss2icon ss2Icon32" id="ss2Icon" data-label="Snip &amp; Sketch"></div>
                 <div class="ss2icon ss2Icon33" id="ss2Icon" data-label="Video Editor"></div>
                 <div class="ss2icon ss2Icon34" id="ss2Icon" data-label="Skype"></div>
                 <div class="ss2icon ss2Icon35" id="ss2Icon" data-label="Notepad"></div>
@@ -142,18 +136,7 @@
                 <i class="iHide" aria-hidden="true"></i>
             </div>
             <div class="smbSep"></div>
-            <div class="smbSection smbSect3" id="smbSect3">
-                <label class="ss3Lbl">My websites</label>
-                <label class="ss3Lbl2">Visit popular online sites by clicking the links below.</label>
-                <div class="recentTiles">
-                    <a class="recTile rt1" data-label1="Reddit" href="https://www.reddit.com" data-subLabel="Social networking"></a>
-                    <a class="recTile rt2" data-label1="Spotify" href="https://open.spotify.com" data-subLabel="Music & Video"></a>
-                    <a class="recTile rt3" data-label1="Twitter" href="https://www.twitter.com" data-subLabel="Social networking"></a>
-                    <a class="recTile rt4" data-label1="YouTube" href="https://www.youtube.com" data-subLabel="Music & Video"></a>
-                    <a class="recTile rt5" data-label1="Office Online" href="https://www.office.com" data-subLabel="Office apps"></a>
-                    <a class="recTile rt6" data-label1="Netflix" href="https://www.netflix.com" data-subLabel="Music & Video"></a>
-                </div>
-            </div>
+            
         </div>
     </div>
 
@@ -414,7 +397,6 @@
                 startButton.addEventListener("mouseenter", colorStartBtn);
                 startButton.addEventListener("mouseleave", resetStartBtn);
                 appSection.style.height = "300px";
-                siteSection.style.display = "flex";
                 showAll.innerHTML = "Show all";
                 resetStartBtn();
             }
