--- a/index.html
+++ b/index.html
@@ -459,10 +459,8 @@
         document.getElementById("calculator").style.transform = "scale(1)";
         document.getElementById("calculator").style.opacity = "1";
         document.getElementById("tbUnpinned").appendChild(document.getElementById("tbbCalculator"));
-        document.getElementById("startMenu").style.transform = "translateX(-50%) translateY(100%)";
+        document.getElementById("startMenu").style.transform = "translateY(100%)";
         document.getElementById("startMenu").style.opacity = '0';
-        document.getElementById("actionCenter").style.transform = "translateY(100%)";
-        document.getElementById("actionCenter").style.opacity = '0';
         document.getElementById("tbbCalculator").onclick = showHideCalculator;
     }
 
@@ -470,10 +468,8 @@
         document.getElementById("calculator").style.transformOrigin = "center";
         document.getElementById("calculator").style.transform = "scale(1)";
         document.getElementById("calculator").style.opacity = "1";
-        document.getElementById("startMenu").style.transform = "translateX(-50%) translateY(100%)";
+        document.getElementById("startMenu").style.transform = "translateY(100%)";
         document.getElementById("startMenu").style.opacity = '0';
-        document.getElementById("actionCenter").style.transform = "translateY(100%)";
-        document.getElementById("actionCenter").style.opacity = '0';
         document.getElementById("tbbCalculator").onclick = showHideCalculator;
     }
 
@@ -525,10 +521,8 @@
             document.getElementById("settingsApp").style.transform = "scale(1)";
             document.getElementById("settingsApp").style.opacity = "1";
             document.getElementById("tbUnpinned").appendChild(document.getElementById("tbbSettings"));
-            document.getElementById("startMenu").style.transform = "translateX(-50%) translateY(100%)";
+            document.getElementById("startMenu").style.transform = "translateY(100%)";
             document.getElementById("startMenu").style.opacity = '0';
-            document.getElementById("actionCenter").style.transform = "translateY(100%)";
-            document.getElementById("actionCenter").style.opacity = '0';
             document.getElementById("tbbSettings").onclick = showHideSettings;
         }
 
@@ -536,10 +530,8 @@
             document.getElementById("settingsApp").style.transformOrigin = "center";
             document.getElementById("settingsApp").style.transform = "scale(1)";
             document.getElementById("settingsApp").style.opacity = "1";
-            document.getElementById("startMenu").style.transform = "translateX(-50%) translateY(100%)";
+            document.getElementById("startMenu").style.transform = "translateY(100%)";
             document.getElementById("startMenu").style.opacity = '0';
-            document.getElementById("actionCenter").style.transform = "translateY(100%)";
-            document.getElementById("actionCenter").style.opacity = '0';
             document.getElementById("tbbSettings").onclick = showHideSettings;
         }
 
