--- a/index.html
+++ b/index.html
@@ -212,11 +212,11 @@
                     <div class="devspec dvspc9" data-devSpecLBL="Chip SOC version">Futur3(R) Center(TM) i21-21514X CPU @ 2.21GHz</div>
                 </div>
                 <div class="windowsSpecs" data-specLBL="Windows specifications">
-                    <div class="devspec dvspc1" data-devSpecLBL="Edition">Windows 10</div>
-                    <div class="devspec dvspc2" data-devSpecLBL="Version">Web</div>
-                    <div class="devspec dvspc3" data-devSpecLBL="Installed on">5/9/21</div>
-                    <div class="devspec dvspc4" data-devSpecLBL="OS build">21513.1</div>
-                    <div class="devspec dvspc5" data-devSpecLBL="Experience">Windows 10 Futur3Sn0w Edition Experience Pack 2.0</div>
+                    <div class="devspec dvspc1" data-devSpecLBL="Edition">Windows 10 Pro</div>
+                    <div class="devspec dvspc2" data-devSpecLBL="Version">22H2</div>
+                    <div class="devspec dvspc3" data-devSpecLBL="Installed on">‎‎07.‎02.‎2025</div>
+                    <div class="devspec dvspc4" data-devSpecLBL="OS build">19045.5440</div>
+                    <div class="devspec dvspc5" data-devSpecLBL="Experience">Windows 10X Feature Experience Pack 120.27512.10351.0</div>
                 </div>
             </div>
         </div>
