--- a/index.html
+++ b/index.html
@@ -409,7 +409,7 @@
         }
 
         function resetStartBtn() {
-            startButton.style.backgroundImage = "var(--start-btn)";
+            startButton.style.backgroundImage = "var(--start-btn2)";
         }
     </script>
 
